--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.1"
+http = "1.3.1"
+serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
