--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ axum = "0.8.1"
 http = "1.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
+dotenv = "0.15.0"
